update CSS and add accessibility to HTML

--- a/index.html
+++ b/index.html
@@ -9,64 +9,64 @@
 <body>
   <aside class="sidebar-nav">
     <section class="aside-block" id="block-profile">
-      <img class="profile-pic" src="images/headshot.jpeg"/>
+      <img class="profile-pic" src="images/headshot.jpeg" alt="Profile picture"/>
       <p>Jack Bevis</p>
     </section>
     <hr>
     <section class="aside-block" id="block-main">
       <h6>Main</h6>
       <ul>
-        <li><img src="images/icons/icon_home.svg"/>HOME</li>
-        <li><img src="images/icons/briefcase.svg"/>JOBS</li>
-        <li><img src="images/icons/resume.svg"/>RESUMES</li>
-        <li><img src="images/icons/clipboard.svg"/>TASKS</li>
-        <li><img src="images/icons/calendar.svg"/>CALENDAR</li>
+        <li><img src="images/icons/icon_home.svg" alt="home"/>HOME</li>
+        <li><img src="images/icons/briefcase.svg" alt="jobs"/>JOBS</li>
+        <li><img src="images/icons/resume.svg" alt="resumes"/>RESUMES</li>
+        <li><img src="images/icons/clipboard.svg" alt="tasks"/>TASKS</li>
+        <li><img src="images/icons/calendar.svg" alt="calendar"/>CALENDAR</li>
       </ul>
     </section>
     <hr>
     <section class="aside-block" id="block-admin">
       <h6>Admin</h6>
       <ul>
-        <li><img src="images/icons/users.svg"/>USERS</li>
-        <li><img src="images/icons/locationpin.svg"/>LOCATION</li>
-        <li><img src="images/icons/workflow.svg"/>WORKFLOW</li>
-        <li><img src="images/icons/jobboard.svg"/>JOB BOARDS</li>
-        <li><img src="images/icons/share.svg"/>SOCIAL</li>
+        <li><img src="images/icons/users.svg" alt="users"/>USERS</li>
+        <li><img src="images/icons/locationpin.svg" alt="location"/>LOCATION</li>
+        <li><img src="images/icons/workflow.svg" alt="workflow"/>WORKFLOW</li>
+        <li><img src="images/icons/jobboard.svg" alt="job boards"/>JOB BOARDS</li>
+        <li><img src="images/icons/share.svg" alt="social"/>SOCIAL</li>
       </ul>
     </section>
     <hr>
     <section class="aside-block" id="block-categories">
       <h6>Categories</h6>
       <ul>
-        <li><img src="images/icons/yellowsquare.svg"/>Administrative</li>
-        <li><img src="images/icons/redsquare.svg"/>Design</li>
-        <li><img src="images/icons/bluesquare.svg"/>Executive</li>
-        <li><img src="images/icons/greensquare.svg"/>Human Resources</li>
+        <li><img src="images/icons/yellowsquare.svg" alt="administrative"/>Administrative</li>
+        <li><img src="images/icons/redsquare.svg" alt="design"/>Design</li>
+        <li><img src="images/icons/bluesquare.svg" alt="exectuive"/>Executive</li>
+        <li><img src="images/icons/greensquare.svg" alt="human resources"/>Human Resources</li>
       </ul>
     </section>
     <hr>
   </aside>
   <section class="main-section">
     <nav class="nav-tiles">
-      <div id="hamburger"><img id="left-arrow" src="images/icons/leftarrow.svg"/><img src="images/icons/hamburger.svg"/></div>
-      <div id="search"><img src="images/icons/search.svg"/><input placeholder="Search for a job, task or resume"</input></div>
-      <div id="profile-page"><img src="images/icons/adduser.svg"/></div>
-      <div id="calendar"><img src="images/icons/calendar.svg"/></div>
-      <div id="grid"><img src="images/icons/grid.svg"/></div>
+      <div id="hamburger" role="Navigaion icon"><img id="left-arrow" src="images/icons/leftarrow.svg"/><img src="images/icons/hamburger.svg" alt="menu"/></div>
+      <div id="search" role="Navigaion icon"><img src="images/icons/search.svg" alt="search input"/><input placeholder="Search for a job, task or resume"</input></div>
+      <div id="profile-page" role="Navigaion icon"><img src="images/icons/adduser.svg" alt="add user"/></div>
+      <div id="calendar" role="Navigaion icon"><img src="images/icons/calendar.svg" alt="calendar"/></div>
+      <div id="grid" role="Navigaion icon"><img src="images/icons/grid.svg" alt="options"/></div>
     </nav>
     <section class="job-title">
       <header>
         <h1>Customer Service Representative</h1>
         <section>
-          <img id="pin" src="images/icons/locationpin.svg"/>
+          <img id="pin" src="images/icons/locationpin.svg" alt="location"/>
           <p class="location">Denver, CO &#9679; <span id="preview">Preview this post</span></p>
         </section>
       </header>
       <section class="job-buttons">
         <button id="open-btn"><span>&#9679;</span> OPEN</button>
-        <button><img src="images/icons/bookmark.svg"/></button>
-        <button><img src="images/icons/pencil.svg"/></button>
-        <button><img src="images/icons/garbage.svg"/></button>
+        <button><img src="images/icons/bookmark.svg" alt="bookmarks"/></button>
+        <button><img src="images/icons/pencil.svg" alt="edit"/></button>
+        <button><img src="images/icons/garbage.svg" alt="delete"/></button>
       </section>
     </section>
     <section class="current-page">
@@ -97,7 +97,7 @@
           <button>Totals: Out of 5,231 views</button>
       </section>
       <section class="graph">
-        <img id="graph-image" src="images/image_graph.png"/>
+        <img id="graph-image" src="images/image_graph.png" alt="graph statistics"/>
         <button>Applicants/day</button>
       </section>
     </section>
@@ -106,7 +106,7 @@
       <section class="job-description">
         <header>
           <h5>JOB DESCRIPTION</h5>
-          <button class="edit-btn"><img src="images/icons/pencil.svg"/>EDIT</button>
+          <button class="edit-btn"><img src="images/icons/pencil.svg" alt="edit"/>EDIT</button>
         </header>
         <article class="job-description-row">
           <h5>POSITION TITLE</h5>
@@ -134,7 +134,7 @@
         </article>
         <article class="job-description-row">
           <h5>HIRING LEAD</h5>
-          <img class="profile-pic" id="dog-pic" src="images/moxie.jpg"/><p>Moxie the Dog</p>
+          <img class="profile-pic" id="dog-pic" src="images/moxie.jpg" alt="Hiring manager Moxie the Dog"/><p>Moxie the Dog</p>
         </article>
         <article class="job-description-row">
           <h5>APPROVED SALARY</h5>
@@ -143,14 +143,14 @@
       </section>
       <section class="lower-half-right">
         <section class="social-area">
-          <button class="social-buttons" id="fb"><img src ="images/social-icons/fb.svg"/>Post to Facebook</button>
-          <button class="social-buttons" id="twitter"><img src ="images/social-icons/twitter.svg"/>Post to Twitter</button>
-          <button class="social-buttons" id="linkedin"><img src ="images/social-icons/linkedin.svg"/>Post to Linkedin</button>
+          <button class="social-buttons" id="fb"><img src ="images/social-icons/fb.svg" alt="Facebook"/>Post to Facebook</button>
+          <button class="social-buttons" id="twitter"><img src ="images/social-icons/twitter.svg" alt="Twitter"/>Post to Twitter</button>
+          <button class="social-buttons" id="linkedin"><img src ="images/social-icons/linkedin.svg" alt="Linkedin"/>Post to Linkedin</button>
         </section>
         <section class="bottom-area">
           <article class="link-cards">
             <header>
-              <img src="images/icons/earth.svg"/>
+              <img src="images/icons/earth.svg" alt="Link to job"/>
               <h4>Link to this Job</h4>
             </header>
             <p>Waiting for the Emmys. BTW did you know won 6 Emmys and was still canceled early by Fox? COME ON. Gosh Mom… after all these years, God's not going to take a call from you.</p>
@@ -162,7 +162,7 @@
           </article>
           <article class="link-cards">
             <header>
-              <img src="images/icons/camera.svg"/>
+              <img src="images/icons/camera.svg" alt="link to widget"/>
               <h4>Use the Button Widget</h4>
             </header>
             <p>Waiting for the Emmys. BTW did you know won 6 Emmys and was still canceled early by Fox? COME ON. Gosh Mom… after all these years, God's not going to take a call from you.</p>
@@ -174,7 +174,7 @@
           </article>
           <article class="link-cards">
             <header>
-              <img src="images/icons/paperairplane.svg"/>
+              <img src="images/icons/paperairplane.svg" alt="upload resumes"/>
               <h4>Upload Resumes by Email</h4>
             </header>
             <p>Waiting for the Emmys. BTW did you know won 6 Emmys and was still canceled early by Fox? COME ON. Gosh Mom… after all these years, God's not going to take a call from you.</p>
