adjust bottom input to full width. extra polish

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             </header>
             <p>Waiting for the Emmys. BTW did you know won 6 Emmys and was still canceled early by Fox? COME ON. Gosh Mom… after all these years, God's not going to take a call from you.</p>
             <section class="url-field">
-              <p contenteditable>http://www.bluthipsum.com...</p>
+              <p id="resume-link" contenteditable>http://www.bluthipsum.com...</p>
             </section>
           </article>
         </section>
